# nova-verzija

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ANALIZA_SUSTAVA.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  admin_api.py  alembic.ini  audit_project.py  base.py  config.py  confusion_report.json  database.py  docker-compose.yml  main.py  missing_list.txt  missing_tools.txt  models.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  reset_db.py  run_tests.py  untrained_sample.json  webhook_simple.py  worker.py
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
config/: croatian_mappings.json  knowledge_graph.json  processed_tool_registry.json  tool_categories.json  tool_documentation.json
data/: training_queries.json
data/training/: intent_full.jsonl  intent_test.jsonl  intent_train.jsonl  query_type.jsonl
docker/: grafana_autoscaler_dashboard.json  init-db.sh  prometheus.yml
docs/: FAISS_IMPLEMENTATION_SUMMARY.md  ROUTING.md  ROUTING_ISSUES_REPORT.md  TOOL_SELECTION_V2_DESIGN.md
k8s/: configmap.yaml  deployment.yaml  keda-autoscaler.yaml  pvc.yaml  sealed-secrets.yaml  service.yaml
models/intent/: metadata.json
scripts/: add_critical_training.py  add_synonyms_to_docs.py  analyze_embedding_coverage.py  analyze_routing_failures.py  auto_improve_documentation.py  autoscaler_load_test.py  check_embedding_coverage.py  dead_code_analyzer.py  debug_boosts.py  debug_faiss_results.py  fix_generic_tool_documentation.py  generate_croatian_descriptions.py  generate_documentation.py  generate_intent_training_data.py  generate_tool_embeddings.py  improve_tool_examples.py  kpi_metrics.py  performance_analysis.py  regenerate_and_test.py  regenerate_embeddings.py  regenerate_missing.py  swagger_watcher.py  sync_tools.py  test_action_intent.py  test_confusion_analysis.py  test_decision_layer.py  test_embedding_quality.py  test_faiss_integration.py  test_full_detection.py  test_full_integration.py  test_full_system_accuracy.py  test_global_950.py  test_intent_detection.py  test_llm_disambiguation_live.py  test_llm_reranking.py  test_production_readiness.py  test_random_50_tools.py  test_search_accuracy.py  test_swagger_flow.py  test_tool_routing_accuracy.py  (+4 more)
scripts/benchmarks/: test_disambiguation.py  test_full_pipeline.py  test_multi_tenancy.py  test_production_readiness.py  test_search_accuracy_v2.py  test_tool_routing_accuracy.py
services/: __init__.py  action_intent_detector.py  admin_review.py  ai_orchestrator.py  ambiguity_detector.py  api_capabilities.py  api_gateway.py  booking_contracts.py  cache_service.py  chain_planner.py  circuit_breaker.py  concept_mapper.py  confirmation_dialog.py  conflict_resolver.py  context_service.py  conversation_manager.py  cost_tracker.py  dependency_resolver.py  domain_detector.py  embedding_service.py  error_learning.py  error_parser.py  error_translator.py  executor_fallback.py  faiss_vector_store.py  feedback_analyzer.py  feedback_learning_service.py  filter_builder.py  flow_phrases.py  gdpr_masking.py  hallucination_repository.py  hierarchical_selector.py  intelligent_router.py  intent_classifier.py  llm_reranker.py  llm_tool_selector.py  message_engine.py  model_drift_detector.py  openai_client.py  parameter_manager.py  (+25 more)
services/context/: __init__.py  param_prompts.py  user_context_manager.py
services/engine/: __init__.py  deterministic_executor.py  flow_executors.py  flow_handler.py  hallucination_handler.py  tool_handler.py  user_handler.py
services/reasoning/: __init__.py  planner.py
services/registry/: __init__.py  cache_manager.py  embedding_coverage.py  embedding_engine.py  embedding_evaluator.py  search_engine.py  swagger_parser.py  tool_store.py  translation_api_client.py  translation_helper.py
tests/: __init__.py  accuracy_test_data.json  conftest.py  conftest_embedding.py  test_950_tools_accuracy.py  test_admin_review.py  test_ai_orchestrator.py  test_ai_orchestrator_fixes.py  test_ambiguity_detector.py  test_api_capabilities.py  test_api_gateway.py  test_booking_flow.py  test_bot_accuracy.py  test_cache_manager.py  test_cache_service.py  test_car_booking_e2e.py  test_case_flow.py  test_chain_planner.py  test_circuit_breaker.py  test_concept_mapper.py  test_config_edge_cases.py  test_confirmation_dialog.py  test_conflict_resolver.py  test_context_manager.py  test_context_service.py  test_conversation_manager.py  test_cost_tracker.py  test_dependency_resolver.py  test_deterministic_executor.py  test_embedding_coverage.py  test_embedding_engine.py  test_embedding_engine_fallback.py  test_embedding_evaluator.py  test_engine_init.py  test_error_learning.py  test_error_parser.py  test_error_translator.py  test_feedback_analyzer.py  test_feedback_learning_service.py  test_feedback_loop_integration.py  (+44 more)
