[project]
name = "mobility-whatsapp-bot"
version = "11.2.0"
description = "MobilityOne WhatsApp Bot - AI-powered fleet management chatbot"
requires-python = ">=3.11"
license = {text = "Proprietary"}

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes (unused imports, undefined names, etc.)
    "B",     # flake8-bugbear (common bug patterns)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module import not at top (FastAPI patterns need this)
    "E722",   # bare except (already fixed in critical paths)
    "E712",   # true/false comparison (explicit in some ORM queries)
    "B008",   # function call in default argument (FastAPI Depends pattern)
    "B905",   # zip strict
    "B904",   # raise without from (too noisy for existing code)
    "B007",   # unused loop variable (common in iteration patterns)
    "F401",   # unused imports (too many to fix in one pass - tracked for cleanup)
    "F541",   # f-string missing placeholders (some are intentional template strings)
    "F841",   # unused variable (some are intentional for destructuring)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E", "F", "B"]
"scripts/benchmarks/*" = ["E", "F", "B"]
"tests/*" = ["E", "F", "B"]
"alembic/*" = ["E", "F", "B"]

[tool.ruff.lint.isort]
known-first-party = ["config", "database", "models", "services"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:asyncio",
    "ignore::DeprecationWarning:pydantic",
    "ignore::UserWarning:tests.test_ghost_variables",
    "ignore::DeprecationWarning:services.admin_review",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
    "ignore:builtin type Swig:DeprecationWarning",
    "ignore:builtin type swig:DeprecationWarning",
]
markers = [
    "asyncio: mark test as async",
    "slow: mark test as slow running",
    "integration: mark test as integration test",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = [
    "scripts/",
    "alembic/",
    "tests/",
]

[tool.coverage.run]
source = ["services", "config"]
omit = [
    "services/faiss_vector_store.py",
    "services/llm_reranker.py",
    "services/unified_search.py",
    "services/executor_fallback.py",
    "services/whatsapp_service.py",
    "services/queue_service.py",
    "services/message_engine.py",
    "services/query_type_classifier.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
precision = 1
